refactor: remove deprecations around score and constraints (#2106)